--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "scripts": {
         "dc:build": "docker-compose -f docker-compose.yml up --build",
-        "dc:watch": "docker-compose -f docker-compose.yml up --watch"
+        "dc:watch": "docker-compose -f docker-compose.yml up --watch",
+        "d-inspect:ips": "docker inspect %* | grep IPAddress"
     }
 }
